syntax = "proto3";

package v1.common_pb;

message Pager {
  int64 page = 1;
  int64 page_size = 2;
  int64 total_rows = 3;
}